--- a/2021_CommitteeStuff/index.Rmd
+++ b/2021_CommitteeStuff/index.Rmd
@@ -46,46 +46,17 @@ style_duo_accent(
 
 *i.e what is the common thread?*
 
-+ We know that networks contain information and we know that they are predictable
++ Networks contain information and we know that they are predictable
 + We also know that they are important for ecosystem functioning but they aren't considered a 'priority'
 
 *Tackling this*
+
+I sort of the 'deliverables' as either very conceptual/synthesis type things or a very practical thing like the Canadian metaweb
 
 + We cannot feasibly, empirically measure all network so we need a toolset to predict them -> `Project One Ring`
 + Let's see how well this works while also providing a 'management tool' -> `Project Pokedex`
 + Okay cool but what about the networks in *my* landscape -> `Project Wombat`
 + But also how are networks percieved? What is complexity anyway and what constrains it -> `Project Malcom` (this link is iffy at best...)
-
----
-
-# Project Malcom
-
-## Background
-
-+ What can we learn form the information that networks contain?
-+ Their complexity?
-+ What about how assembly constrains complexity?
-
-## SVD entropy reveals the high complexity of ecological networks
-
-*Featuring GVDR*
-
-+ Turns out ecologists have had it all wrong when it comes to network complexity...
-+ Using SVD entropy as a measure of network complexity
-+ Turns out they are very complex - *i.e.* Rule #1 has been displaced
-+ Also some other cools things regarding connectence and complexity
-+ **"Done"**
-
----
-
-# Project Malcom
-
-## The Manna program
-
-+ Some stuff/thoughts from the Albuquerque airport... Its also in *C*
-+ Another potential aspect to look into is the Island Biogeography Assembly models form Tad Dallas and Pedro Jordano
-+ Looking at change in entropy as a function as well as simulating the correct values for connectence as opposed to the 'full spectrum' - Building on Andrew's work.
-+ **Deliverable:** ??A network assembly model??
 
 ---
 
@@ -101,9 +72,9 @@ style_duo_accent(
 
 *Featuring The Fellowship* 
 
-+ How do we combine space and time into out predictions: a horizon scan.
++ How do we integrate space and time into our predictions: a horizon scan.
 
-+ **Pending reviewer feedback**
++ **Deliverable:** Pending reviewer feedback
 
 <span 
   style="
@@ -119,7 +90,7 @@ style_duo_accent(
 
 ## Integration with Project Pokedex
 
-+ *Featuring some members of The Fellowship and the The Rohirrim*
++ *Featuring some members of The Fellowship and The Rohirrim*
 
 
 + A mini case study/additional proof of concept??
@@ -134,6 +105,55 @@ style_duo_accent(
   <img src="img/ProjectRing.jpg" width="80%" />
 </span>
 
+---
+
+# Project Pokedex
+
+## Link predictions; Canadian metaweb
+
++ The CIEE working group
++ Ties in with pt. 2 of `Project One Ring` - gets to claim the end product though...
++ <span style="color: #c45371; font-weight:bold">ICouldNeverTakeThePlaceOfYourMammal</span> 
+  + *i.e.* The Blueprint pt.1 a quick 'n dirty 'does it work'
+  + Sensu RDPG (GVDR & Stouffer's work)
+  + Predicting networks from species phylogenies
++ Essentially can we say: European Metaweb + AI = Canadian Metaweb
+  + Maybe with a bit of phone a friend every now and then
+
+
++ **Deliverable:** A Canadian metaweb (super simple)
+
+<span 
+  style="
+  margin-left:70%; 
+  position: absolute; 
+  top: 5%">
+  <img src="img/wombat.png" width="75%">
+</span>
+
+---
+
+# Project Pokedex
+
+## <span style="color: #c45371; font-weight:bold">The B-sides</span>
+
++ Ultimately a lot of spin-off projects will also come out of the CIEE working group
+
+  + <span style="color: #c45371">1º Would be Dom's expert elicitation work</span>
+  + <span style="color: #c45371">Climate change and food webs in Canada</span>
+  + <span style="color: #c45371">AI vs Experts</span>
+  
+  
++ <span style="color: #c45371; font-weight:bold">ICouldNeverTakeThePlaceOfYourMammal</span> 
++ Other future plans?
+
+<span 
+  style="
+  margin-left:70%; 
+  position: absolute; 
+  top: 5%">
+  <img src="img/wombat.png" width="75%">
+</span>
 
 ---
 
@@ -148,6 +168,7 @@ style_duo_accent(
 ## SpatialBoundaries.jl
 
 + Developing the needed toolset to actually do the wombling...
++ Involving partial derivatives, language trees and SoCal
 + Focus would be on triangulation and lattice wombling
 + Maybe categorical?
 
@@ -195,11 +216,11 @@ style_duo_accent(
 
 + Idea is to use the metaweb from `Project Pokedex`
   + But also need to do some simulating...
+  + This would have a validation component as well
 + How do *within* network dynamics change in space (and time)? *i.e.* the idea of a moving window
   + Different trophic levels/species perceive the landscape differently
   + Seasonality - migration, diet shifts
 + Moving beyond the 3 node motif/graphlets - (The backbone ms)
-+ This would have a validation component as well
 
 
 + **Deliverable:** A methods, perspectives type paper on the validity/use case of this approach.
@@ -214,54 +235,34 @@ style_duo_accent(
 
 ---
 
-# Project Pokedex
+# Project Malcom
 
-## Link predictions; Canadian metaweb
+## Background
 
-+ The CIEE working group
++ What can we learn from the information that networks contain?
++ Their complexity?
++ What about how assembly constrains complexity?
 
-+ Ties in with pt. 2 of `Project One Ring` - arguably is the 'leading edge' though...
+## SVD entropy reveals the high complexity of ecological networks
 
-+ <span style="color: #c45371; font-weight:bold">ICouldNeverTakeThePlaceOfYourMammal</span> 
-  + *i.e.* The Blueprint pt.1 a quick 'n dirty 'does it work'
-  + Sensu RDPG (GVDR & Stouffer's work)
-  + Predicting networks from species phylogenies
-  
-+ Essentially can we say: European Metaweb + AI = Canadian Metaweb
+*Featuring GVDR*
 
-+ **Deliverable:** A Canadian metaweb (super simple)
-
-<span 
-  style="
-  margin-left:70%; 
-  position: absolute; 
-  top: 5%">
-  <img src="img/wombat.png" width="75%">
-</span>
++ Turns out ecologists have had it all wrong when it comes to network complexity...
++ Using SVD entropy as a measure of network complexity
++ Turns out they are very complex - *i.e.* Rule #1 (or was it 2?) has been displaced
++ Also some other cools things regarding connectence and complexity
++ **"Done"**
 
 ---
 
-# Project Pokedex
+# Project Malcom
 
-## <span style="color: #c45371; font-weight:bold">The B-sides</span>
+## The Manna program
 
-+ Ultimately a lot of spin-off projects will also come out of the CIEE working group
-
-  + <span style="color: #c45371">1º Would be Dom's expert elicitation work</span>
-  + <span style="color: #c45371">Climate change and food webs in Canada</span>
-  + <span style="color: #c45371">AI vs Experts</span>
-  
-  
-+ <span style="color: #c45371; font-weight:bold">ICouldNeverTakeThePlaceOfYourMammal</span> 
-+ Other future plans?
-
-<span 
-  style="
-  margin-left:70%; 
-  position: absolute; 
-  top: 5%">
-  <img src="img/wombat.png" width="75%">
-</span>
++ Some stuff/thoughts from the Albuquerque airport... Its also in *C*
++ Another potential aspect to look into is the Island Biogeography Assembly models form Tad Dallas and Pedro Jordano
++ Looking at change in entropy as a function as well as simulating the correct values for connectence as opposed to the 'full spectrum' - Building on Andrew's work.
++ **Deliverable:** ??A network assembly model??
 
 ---
 
